--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,169 @@
-/* место для вашего кода */
+body {
+    background-color: #f5f5f5;
+    font-weight: normal;
+}
+
+/* --HEADER-- */
+.header {
+    padding: 92px 24px 96px;
+    display: grid;
+    font-weight: normal;
+    color: #000;
+    grid-template-columns: 3fr 1fr 3fr;
+    background-color: #fff;
+    font-size: 18px;
+}
+
+.header__menu {
+    display: flex;
+    align-items: center;
+    margin-left: 26.52px;
+}
+
+.header__links-list {
+    list-style: circle;
+    display: flex;
+    gap: 20px;
+}
+
+.header__links-list-item {
+    text-transform: lowercase;
+    margin-left: 12px;
+}
+
+.header__links-list-item_no-bullit {
+    list-style: none;
+    margin-left: 0;
+}
+
+.header__link {
+    /* text-decoration: underline; */
+    text-decoration: none;
+    border-bottom: 1px #000 solid;
+    letter-spacing: 0.01em;
+}
+
+.header__link_active {
+    /* text-decoration: none; */
+    border: none;
+    letter-spacing: normal;
+}
+
+.header__logo {
+    max-width: 148px;
+    max-height: 105px;
+    margin: 0 auto;
+}
+
+.header__logo-image {
+    max-width: 148px;
+    max-height: 105px;
+}
+
+.address {
+    max-width: 240.52px;
+    padding-right: 2.52px;
+    padding-left: 1px;
+    line-height: 24.3px;
+}
+
+.header__address {
+    justify-self: end;
+    margin-right: 25.48px;
+    align-self: center;
+}
+
+.address-link {
+    letter-spacing: 0.01em;
+    /* text-decoration: underline; */
+    text-decoration: none;
+    border-bottom: 1px #000 solid;
+}
+
+.address-link .phone-number {
+    margin-left: 0.52px;
+}
+
+
+/* --COVER */
+.cover {
+    background-image: url(../images/cover.jpg);
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: cover;
+    position: relative;
+    color: #fff;
+    z-index: -2;
+    text-transform: uppercase;
+}
+
+.overlay {
+    position: absolute;
+    background-color: rgb(0 0 0 / 0.6);
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.cover__title {
+    font-family: Raleway, sans-serif;
+    font-weight: bold;
+    font-size: 100px;
+    z-index: 0;
+    padding: 165px 50px 135px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.aligned-text {
+    display: block;
+    letter-spacing: 0.3em;
+    line-height: 1.15em;
+}
+
+.aligned-text-center {
+    text-align: center;
+    line-height: 1em;
+}
+
+.aligned-text-right {
+    text-align: right;
+    line-height: 1em;
+}
+
+.letter-spacing-extended {
+    letter-spacing: 0.6em;
+}
+
+.no-letter-spacing {
+    letter-spacing: 0;
+}
+
+.cover__description {
+    padding: 0 50px 51px 78px;
+    display: flex;
+    align-items: center;
+    gap: 79px;
+}
+
+.cover__description-text {
+    font-size: 22px;
+    line-height: 28px;
+    word-spacing: 18.3px;
+}
+
+.bet-button {
+    margin: 0;
+    padding: 0;
+    width: 256px;
+    height: 51px;
+    background-color: transparent;
+    border: 1px solid #fff;
+    color: #fff;
+    font-weight: 500px;
+    font-size: 22px;
+    font-family: Raleway, sans-serif;
+    text-transform: uppercase;
+    z-index: 2;
+}
