--- a/styles/style.css
+++ b/styles/style.css
@@ -1,169 +1,347 @@
 body {
-    background-color: #f5f5f5;
-    font-weight: normal;
+  font-weight: 400;
+  color: #000;
+  background-color: #fff;
 }
 
 /* --HEADER-- */
 .header {
-    padding: 92px 24px 96px;
-    display: grid;
-    font-weight: normal;
-    color: #000;
-    grid-template-columns: 3fr 1fr 3fr;
-    background-color: #fff;
-    font-size: 18px;
+  padding: 92px 24px 94px;
+  display: grid;
+  grid-template-columns: 3fr 1fr 3fr;
+  font-size: 18px;
 }
 
 .header__menu {
-    display: flex;
-    align-items: center;
-    margin-left: 26.52px;
+  display: flex;
+  align-items: center;
+  margin-left: 26.52px;
 }
 
 .header__links-list {
-    list-style: circle;
-    display: flex;
-    gap: 20px;
+  list-style: circle;
+  display: flex;
+  gap: 20px;
 }
 
 .header__links-list-item {
-    text-transform: lowercase;
-    margin-left: 12px;
+  text-transform: lowercase;
+  margin-left: 12px;
 }
 
 .header__links-list-item_no-bullit {
-    list-style: none;
-    margin-left: 0;
+  list-style: none;
+  margin-left: 0;
 }
 
 .header__link {
-    /* text-decoration: underline; */
-    text-decoration: none;
-    border-bottom: 1px #000 solid;
-    letter-spacing: 0.01em;
+  text-decoration: none;
+  border-bottom: 1px #000 solid;
+  letter-spacing: 0.01em;
 }
 
 .header__link_active {
-    /* text-decoration: none; */
-    border: none;
-    letter-spacing: normal;
+  border: none;
+  letter-spacing: normal;
 }
 
 .header__logo {
-    max-width: 148px;
-    max-height: 105px;
-    margin: 0 auto;
+  max-width: 148px;
+  max-height: 105px;
+  margin: 0 auto;
 }
 
 .header__logo-image {
-    max-width: 148px;
-    max-height: 105px;
+  max-width: 148px;
+  max-height: 105px;
 }
 
 .address {
-    max-width: 240.52px;
-    padding-right: 2.52px;
-    padding-left: 1px;
-    line-height: 24.3px;
+  max-width: 240.52px;
+  padding-right: 2.52px;
+  padding-left: 1px;
+  line-height: 24.3px;
+  font-size: 18px;
 }
 
 .header__address {
-    justify-self: end;
-    margin-right: 25.48px;
-    align-self: center;
+  justify-self: end;
+  margin-right: 25.48px;
+  align-self: center;
 }
 
 .address-link {
-    letter-spacing: 0.01em;
-    /* text-decoration: underline; */
-    text-decoration: none;
-    border-bottom: 1px #000 solid;
+  letter-spacing: 0.01em;
+  text-decoration: none;
+  border-bottom: 1px #000 solid;
 }
 
 .address-link .phone-number {
-    margin-left: 0.52px;
+  margin-left: 0.52px;
 }
-
 
 /* --COVER */
 .cover {
-    background-image: url(../images/cover.jpg);
-    background-repeat: no-repeat;
-    background-position: top;
-    background-size: cover;
-    position: relative;
-    color: #fff;
-    z-index: -2;
-    text-transform: uppercase;
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+  position: relative;
+  color: #fff;
+  z-index: -2;
+  text-transform: uppercase;
 }
 
 .overlay {
-    position: absolute;
-    background-color: rgb(0 0 0 / 0.6);
-    width: 100%;
-    height: 100%;
-    z-index: -1;
+  position: absolute;
+  background-color: rgb(0 0 0 / 0.6);
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 .cover__title {
-    font-family: Raleway, sans-serif;
-    font-weight: bold;
-    font-size: 100px;
-    z-index: 0;
-    padding: 165px 50px 135px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  font-weight: 700;
+  font-size: 100px;
+  z-index: 0;
+  padding: 165px 50px 135px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .aligned-text {
-    display: block;
-    letter-spacing: 0.3em;
-    line-height: 1.15em;
+  display: block;
+  letter-spacing: 0.3em;
+  line-height: 1.15em;
 }
 
 .aligned-text-center {
-    text-align: center;
-    line-height: 1em;
+  text-align: center;
+  line-height: 1em;
 }
 
 .aligned-text-right {
-    text-align: right;
-    line-height: 1em;
+  text-align: right;
+  line-height: 1em;
 }
 
 .letter-spacing-extended {
-    letter-spacing: 0.6em;
+  letter-spacing: 0.6em;
 }
 
 .no-letter-spacing {
-    letter-spacing: 0;
+  letter-spacing: 0;
 }
 
 .cover__description {
-    padding: 0 50px 51px 78px;
-    display: flex;
-    align-items: center;
-    gap: 79px;
+  padding: 0 50px 51px 78px;
+  display: flex;
+  align-items: center;
+  gap: 79px;
 }
 
 .cover__description-text {
-    font-size: 22px;
-    line-height: 28px;
-    word-spacing: 18.3px;
+  font-size: 22px;
+  line-height: 28px;
+  word-spacing: 18.3px;
 }
 
 .bet-button {
-    margin: 0;
-    padding: 0;
-    width: 256px;
-    height: 51px;
-    background-color: transparent;
-    border: 1px solid #fff;
-    color: #fff;
-    font-weight: 500px;
-    font-size: 22px;
-    font-family: Raleway, sans-serif;
-    text-transform: uppercase;
-    z-index: 2;
+  margin: 0;
+  padding: 0;
+  width: 256px;
+  height: 51px;
+  background-color: transparent;
+  border: 1px solid #fff;
+  color: #fff;
+  font-weight: 500;
+  font-size: 22px;
+  text-transform: uppercase;
+  z-index: 1;
+}
+
+/* --LOTS-- */
+.lots {
+  padding: 179px 24px 0px;
+}
+
+.lots__heading {
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-left: 40px;
+  margin-bottom: 27px;
+}
+
+.lots__card-list {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+}
+
+.lots__card-list-item {
+  width: 334px;
+  height: 563px;
+  flex-grow: 1;
+}
+
+.card-link {
+  position: relative;
+  display: block;
+  text-decoration: none;
+  height: 100%;
+}
+
+.card {
+  position: relative;
+  height: 100%;
+  z-index: -1;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+}
+
+.card__title {
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 26.4px;
+  text-decoration: underline;
+  text-underline-offset: 3px;
+  text-transform: uppercase;
+  padding: 51px 40px 0;
+}
+
+.card__text {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  padding: 0 40px 48px;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.lots__look-more-link {
+  display: block;
+  font-size: 20px;
+  line-height: 23.48px;
+  text-decoration: none;
+  text-transform: lowercase;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  margin: 32px 0 0 40px;
+}
+
+/* --ABOUT-- */
+.about {
+  padding: 181px 24px 0;
+  margin-bottom: 180px;
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  gap: 25px;
+}
+
+.about__column {
+  justify-self: center;
+}
+
+.about__logo {
+  background-color: #000;
+  border-radius: 100%;
+  width: 240px;
+  height: 240px;
+  padding: 64px 45.52px 62px 46.48px;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__title {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 46.96px;
+  margin-bottom: 100px;
+  margin-top: 101px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.01em;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  padding-right: 5px;
+}
+
+.second-paragraph {
+  letter-spacing: normal;
+  padding: 0;
+}
+
+/* --FOOTER-- */
+.footer {
+  padding: 0 50px 88px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.footer__menu-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  margin-top: 1px;
+}
+
+.footer__menu-list-item {
+  text-align: center;
+}
+
+.footer__menu-link {
+  text-transform: lowercase;
+  text-decoration: underline;
+  font-size: 18px;
+  line-height: 21.13px;
+  text-underline-offset: 4px;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__social-list {
+  list-style: none;
+  justify-self: end;
+  align-content: center;
+  display: flex;
+  gap: 48px;
+  margin-top: 1px;
+}
+
+.footer__social-list-item {
+  width: 48px;
+  height: 48px;
+}
+
+.footer__social-link {
+  display: block;
+  height: 100%;
 }
