--- a/styles/style.css
+++ b/styles/style.css
@@ -240,7 +240,7 @@ body {
   display: block;
   font-size: 20px;
   line-height: 23.48px;
-  text-decoration: none;
+  text-decoration: underline;
   text-transform: lowercase;
   text-underline-offset: 5px;
   margin: 32px 0 0 40px;
