--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,9 @@ body {
   width: 1100px;
   margin: 0 auto;
   font-family: Raleway, sans-serif;
+  font-weight: 400;
+  color: #000;
+  background-color: #fff;
 }
 
 h1,
