--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,3 @@
-body {
-  font-weight: 400;
-  color: #000;
-  background-color: #fff;
-}
-
 /* --HEADER-- */
 .header {
   padding: 92px 24px 94px;
@@ -60,8 +54,9 @@ body {
   max-width: 240.52px;
   padding-right: 2.52px;
   padding-left: 1px;
-  line-height: 24.3px;
+  line-height: 1.35em;
   font-size: 18px;
+  font-style: normal;
 }
 
 .header__address {
@@ -76,9 +71,6 @@ body {
   border-bottom: 1px #000 solid;
 }
 
-.address-link .phone-number {
-  margin-left: 0.52px;
-}
 
 /* --COVER */
 .cover {
@@ -88,22 +80,24 @@ body {
   background-size: cover;
   position: relative;
   color: #fff;
-  z-index: -2;
+  /* z-index: 0; */
   text-transform: uppercase;
 }
 
 .overlay {
   position: absolute;
+  inset: 0;
   background-color: rgb(0 0 0 / 0.6);
   width: 100%;
   height: 100%;
-  z-index: -1;
+  z-index: 1;
 }
 
 .cover__title {
+  position: relative;
   font-weight: 700;
   font-size: 100px;
-  z-index: 0;
+  z-index: 1;
   padding: 165px 50px 135px;
   display: flex;
   flex-direction: column;
@@ -139,15 +133,18 @@ body {
   display: flex;
   align-items: center;
   gap: 79px;
+  position: relative;
+  z-index: 1;
 }
 
 .cover__description-text {
   font-size: 22px;
-  line-height: 28px;
+  line-height: 1.27em;
   word-spacing: 18.3px;
 }
 
 .bet-button {
+  font-family: Raleway, sans-serif;
   margin: 0;
   padding: 0;
   width: 256px;
@@ -158,7 +155,6 @@ body {
   font-weight: 500;
   font-size: 22px;
   text-transform: uppercase;
-  z-index: 1;
 }
 
 /* --LOTS-- */
@@ -183,7 +179,7 @@ body {
 
 .lots__card-list-item {
   width: 334px;
-  height: 563px;
+  min-height: 563px;
   flex-grow: 1;
 }
 
@@ -197,7 +193,7 @@ body {
 .card {
   position: relative;
   height: 100%;
-  z-index: -1;
+  z-index: 0;
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -210,18 +206,22 @@ body {
 .card__title {
   font-size: 22px;
   font-weight: 700;
-  line-height: 26.4px;
+  line-height: 1.2em;
   text-decoration: underline;
   text-underline-offset: 3px;
   text-transform: uppercase;
   padding: 51px 40px 0;
+  position: relative;
+  z-index: 1;
 }
 
 .card__text {
   font-size: 20px;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 1.2em;
   padding: 0 40px 48px;
+  position: relative;
+  z-index: 1;
 }
 
 .card_type_film {
@@ -239,7 +239,7 @@ body {
 .lots__look-more-link {
   display: block;
   font-size: 20px;
-  line-height: 23.48px;
+  line-height: 1.174em;
   text-decoration: underline;
   text-transform: lowercase;
   text-underline-offset: 5px;
@@ -275,7 +275,7 @@ body {
 .about__title {
   font-size: 40px;
   font-weight: 700;
-  line-height: 46.96px;
+  line-height: 1.174em;
   margin-bottom: 100px;
   margin-top: 101px;
   text-transform: uppercase;
@@ -283,7 +283,7 @@ body {
 
 .about__text {
   font-size: 20px;
-  line-height: 24px;
+  line-height: 1.2em;
   letter-spacing: 0.01em;
   display: flex;
   flex-direction: column;
@@ -291,10 +291,6 @@ body {
   padding-right: 5px;
 }
 
-.second-paragraph {
-  letter-spacing: normal;
-  padding: 0;
-}
 
 /* --FOOTER-- */
 .footer {
@@ -318,7 +314,7 @@ body {
   text-transform: lowercase;
   text-decoration: underline;
   font-size: 18px;
-  line-height: 21.13px;
+  line-height: 1.173em;
   text-underline-offset: 4px;
 }
 
@@ -337,7 +333,6 @@ body {
 
 .footer__social-list-item {
   width: 48px;
-  height: 48px;
 }
 
 .footer__social-link {
